<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/getProducts"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/download_products_button" />

        <Button
            android:id="@+id/updateSales"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/upload_sales_button" />

        <Button
            android:id="@+id/nextPage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/next_button" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>