<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/buttonScroll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/buttonTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <TableLayout
        android:id="@+id/summaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/buttonScroll">

        <TableRow android:gravity="center">
            <TextView
                android:layout_margin="20dp"
                android:id="@+id/message1"/>

            <TextView
                android:layout_margin="20dp"
                android:id="@+id/message2"/>
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:layout_margin="20dp"
                android:id="@+id/message3"/>

            <TextView
                android:layout_margin="20dp"
                android:id="@+id/message4"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/saleFButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryLayout">

        <Button
            android:id="@+id/cash_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cash_button" />

        <Button
            android:id="@+id/credit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/credit_button" />
    </LinearLayout>

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/previousButton"
        app:layout_constraintTop_toBottomOf="@+id/saleFButtonLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>